--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- <meta
       http-equiv="Content-Security-Policy"
@@ -36,6 +36,12 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Gujarati:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body className="dark">
@@ -52,5 +58,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="../path/to/flowbite/dist/flowbite.js"></script>
   </body>
 </html>
